--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
     		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
     		<version>3.0.1</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.mysql</groupId>
+    		<artifactId>mysql-connector-j</artifactId>
+    		<version>8.0.32</version>
+		</dependency>
  
   
   </dependencies>
