this is the simple form almost completed

--- a/pom.xml
+++ b/pom.xml
@@ -30,20 +30,28 @@
     		<version>6.0.0</version>
     		<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
-    		<groupId>org.glassfish.web</groupId>
-    		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
-    		<version>3.0.1</version>
+    		<groupId>jakarta.servlet.jsp.jstl</groupId>
+    		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+    		<version>3.0.0</version>
 		</dependency>
+		
+
 		
 		<dependency>
     		<groupId>com.mysql</groupId>
     		<artifactId>mysql-connector-j</artifactId>
     		<version>8.0.32</version>
 		</dependency>
- 
-  
+		
+		<dependency> 
+      <groupId>javax.servlet</groupId> 
+      <artifactId>jstl</artifactId> 
+    <version>1.2</version> 
+</dependency>
+		
+
   </dependencies>
   <build>
     <finalName>simpleform</finalName>
