--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
     		<version>6.0.0</version>
     		<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.glassfish.web</groupId>
+    		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+    		<version>1.2.6</version>
+		</dependency>
 
 		<dependency>
     		<groupId>jakarta.servlet.jsp.jstl</groupId>
@@ -37,21 +43,30 @@
     		<version>3.0.0</version>
 		</dependency>
 		
-
+		<dependency>
+  			<groupId>javax.servlet</groupId>
+  			<artifactId>jstl</artifactId>
+  			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 		
 		<dependency>
-    		<groupId>com.mysql</groupId>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		
+		<dependency>
+   		 	<groupId>com.mysql</groupId>
     		<artifactId>mysql-connector-j</artifactId>
     		<version>8.0.32</version>
 		</dependency>
 		
-		<dependency> 
-      <groupId>javax.servlet</groupId> 
-      <artifactId>jstl</artifactId> 
-    <version>1.2</version> 
-</dependency>
 		
-
   </dependencies>
   <build>
     <finalName>simpleform</finalName>
