--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,10 +6,9 @@ version="4.0">
   <display-name>simpleform</display-name>
   <welcome-file-list>
 
-    <welcome-file>form.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
    
   </welcome-file-list>
-  
   
   <servlet>
   	<servlet-name>FormServlet</servlet-name>
@@ -19,6 +18,16 @@ version="4.0">
   <servlet-mapping>
   	<servlet-name>FormServlet</servlet-name>
   	<url-pattern>/formSend</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+  	<servlet-name>LoginServlet</servlet-name>
+  	<servlet-class>com.deborasroka.simpleform.control.LoginServlet</servlet-class>
+  </servlet>
+    
+  <servlet-mapping>
+  	<servlet-name>LoginServlet</servlet-name>
+  	<url-pattern>/loginServ</url-pattern>
   </servlet-mapping>
   
 </web-app>
