--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,14 @@
 		<dependency>
    		 	<groupId>com.mysql</groupId>
     		<artifactId>mysql-connector-j</artifactId>
-    		<version>8.0.32</version>
+    		<version>8.0.33</version>
 		</dependency>
+		
+		<!-- <dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>5.7</version>
+		</dependency> -->
 		
 		
   </dependencies>
